--- a/src/main.html
+++ b/src/main.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>MonkeyWeb</title>
     </head>
-    <body id="react-root"></body>
+    <body>
+        <div id="react-root"></div>
+    </body>
 </html>
